--- a/typography.html
+++ b/typography.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="navigation">
-            <h1 class="name">NUTRITIONAL SPACES STYLEGUIDE</h1>
+            <h1 class="name">SHAREFOOD STYLEGUIDE</h1>
             <input type="checkbox" class="navigation_checkbox" id="toggle">
             <label for="toggle" class="navigation_btn">
                 <span class="navigation_icon">&nbsp;</span>
