added our names

--- a/color.html
+++ b/color.html
@@ -174,8 +174,8 @@
 
     <div class="f_color_topline"></div>
     <div class="footer">
-        <h1 class="brand_name"> NUTRITIONAL SPACES</h1>
-        <h1 class="copy_right">©2021</h1>
+        <h1 class="brand_name"> SHARE FOOD</h1>
+        <h1 class="copy_right">©2022</h1>
     </div>
 </body>
 
