--- a/home.html
+++ b/home.html
@@ -90,9 +90,9 @@
         <div class="footer">
             <hr class="line">
             <br><br>
-            <h1 class="brand_name"> NUTRITIONAL SPACES</h1>
-            <h1 class="copy_right">©2021</h1>
-            <h3 class="team5">Team #5: Charlene Tran, Sandeep Sangar, John Zhou, Yuma Hosomi </h3>
+            <h1 class="brand_name"> SHARE FOOD</h1>
+            <h1 class="copy_right">©2022</h1>
+            <h3 class="team5">Team #2: Horus Wan, Philip Ho, & William Chu </h3>
         </div>
     </div>
 </body>
