--- a/logo.html
+++ b/logo.html
@@ -150,8 +150,8 @@
     
         <div class="logo_footer">
             <div class="logo_topline"></div>
-            <h1 class="logo_name"> NUTRITIONAL SPACES</h1>
-            <h1 class="logo_copy_right">©2021</h1>
+            <h1 class="logo_name"> SHARE FOOD</h1>
+            <h1 class="logo_copy_right">©2022</h1>
         </div>
 
 
