--- a/photo.html
+++ b/photo.html
@@ -99,8 +99,8 @@
         <div class="footer">
             <hr class="line_5">
             <br><br>
-            <h1 class="brand_name_5"> NUTRITIONAL SPACES</h1>
-            <h1 class="copy_right_5">©2021</h1>
+            <h1 class="brand_name_5"> SHARE FOOD</h1>
+            <h1 class="copy_right_5">©2022</h1>
         </div>
 
     </div>
