--- a/typography.html
+++ b/typography.html
@@ -280,8 +280,8 @@
     </div>
     <footer>
         <div id="footer_line"></div>
-        <p class="footer_p1">NUTRITIONAL SPACES</p>
-        <p class="footer_p2">©2021</p>
+        <p class="footer_p1">SHARE FOOD</p>
+        <p class="footer_p2">©2022</p>
     </footer>
 </body>
 
