--- a/photo.html
+++ b/photo.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div>
-            <a href="home.html"><img src="Logo3.png" class="Logo"></a>
+            <a href="home.html"><img src="img/Logo3.png" class="Logo"></a>
         </div>
 
         <div class="navigation">
@@ -66,7 +66,7 @@
                     This image is shown for the cover image on the welcome page, it includes the main colors of the page to give the user a dynamic and fresh feel before starting the application. 
                     Image will be assigned with 280x280, but we will resize it if needed.
                 </p>
-                <img class="main_img" src="Main-pic.jpeg">
+                <img class="main_img" src="img/Main-pic.jpeg">
                 <h4 class="f_img-heading">Shadow</h4>
                 <p class="f_img_text">Use graphic shadows to add interest to compositions.</p>
 
@@ -81,17 +81,17 @@
             </div>
 
             <div>
-                <img class="first_img" src="diet.png">
-                <img class="second_img" src="lose-weight.png">
-                <img class="third_img" src="muscle.png">
-                <img class="fourth_img" src="heartbeat.png">
-                <img class="fifth_img" src="lotus-position.png">
-                <img class="sixth_img" src="weight-loss.png">
+                <img class="first_img" src="img/diet.png">
+                <img class="second_img" src="img/lose-weight.png">
+                <img class="third_img" src="img/muscle.png">
+                <img class="fourth_img" src="img/heartbeat.png">
+                <img class="fifth_img" src="img/lotus-position.png">
+                <img class="sixth_img" src="img/weight-loss.png">
             </div>
 
             <div>
                 <h1 class="link_5"><a href="home.html" class="text_link_5">HOME</a></h1>
-                <a href="home.html"><img class="next_5" src="next.png"></a>
+                <a href="home.html"><img class="next_5" src="img/next.png"></a>
             </div>
 
         </div>
