added main logo. colors will be updated

--- a/color.html
+++ b/color.html
@@ -14,8 +14,8 @@
 
 <body>
     <div class="Logo_page">
-        <a href="home.html"><img src="Logo3.png" class="Logo"></a>
-        <h1 class="name">NUTRITIONAL SPACES STYLEGUIDE</h1>
+        <a href="home.html"><img src="img/sf_logo.png" class="Logo"></a>
+        <h1 class="name">SHARE FOOD</h1>
     </div>
 
     <div class="navigation">
