--- a/photo.html
+++ b/photo.html
@@ -15,11 +15,11 @@
 <body>
     <div class="container">
         <div>
-            <a href="home.html"><img src="img/Logo3.png" class="Logo"></a>
+            <a href="home.html"><img src="img/sf_logo.png" class="Logo"></a>
         </div>
 
         <div class="navigation">
-            <h1 class="name">NUTRITIONAL SPACES STYLEGUIDE</h1>
+            <h1 class="name">SHARE FOOD</h1>
             <input type="checkbox" class="navigation_checkbox" id="toggle">
             <label for="toggle" class="navigation_btn"><span class="navigation_icon">&nbsp;</span></label>
             <div class="nav_bg">&nbsp;</div>
