added logo variations

--- a/logo.html
+++ b/logo.html
@@ -63,6 +63,39 @@
             <div>
                 <img src="img/sf_main.png" class="logo_size">
             </div>
+            <br><br>
+
+            <div class="logo_page">
+                <div class="logo_page_topline"></div>
+                Horizontal Logo
+                <div class="logo_page_btmline"></div>
+            </div>
+
+            <div>
+                <img src="img/sf_wordmark.png" class="logo_size">
+            </div>
+            <br><br>
+
+            <div class="logo_page">
+                <div class="logo_page_topline"></div>
+                Black, White, & Grayscale
+                <div class="logo_page_btmline"></div>
+            </div>
+
+            <div>
+                <img src="img/sf_bw.png" class="logo_size">
+            </div>
+            <br><br>
+
+            <div class="logo_page">
+                <div class="logo_page_topline"></div>
+                Horizontal Logo
+                <div class="logo_page_btmline"></div>
+            </div>
+
+            <div>
+                <img src="img/sf_horizontal.png" class="logo_size">
+            </div>
 
             <div class="color_pallete">
                 <div class="color_pallete_topline"></div>
