--- a/typography.html
+++ b/typography.html
@@ -41,18 +41,11 @@
             </div>
             <div>
                 <p class="typo_infor">
-                    We are using two main fonts, Vollkorn and Rubik. Since these two fonts are font pairing,
-                    we combine them with the desire to create a stunning visual effect as well as improve the design's
-                    content delivery.
+                    The two main fonts we use are Vollkorn and Rubik. We are combining them to improve our design's visual attractiveness.
+                    One of them being serif while the other being sans-serif.
                     <br><br><br>
-
-                    While avoiding the use of display fonts, we prefer to choose two main fonts that are neat, flexible,
-                    easy to read,
-                    and eye-catching to attract users, and that will be a highlight for identification. trademark. So we
-                    chose the above
-                    font because it suits the design, style of high aesthetic beauty. Additionally, we'll incorporate
-                    custom modifications
-                    to these typefaces as needed to make it fresh and different.
+                    We made the decision to look for two fonts that were eye-catching and not feel boring for readers. This lead us to choose these two fonts to differentiate our site from other sites. Furthermore, these fonts will make our site fresh and the feeling suit the app we are creating.  
+    
                 </p>
             </div>
 
@@ -62,9 +55,7 @@
                 <hr class="typo_line_1">
 
                 <p class="typo_vollkorn">
-                    Vollkorn is an Omnibus Type font. The elegance of Vollkorn's capital letters makes it a great option
-                    for it suitable for headings. We also use it to make logo wordmark.
-                    The font size should be 18 px to 20px for the title. We will resize it if needed.
+                    Vollkorn is an Serif Type font. Vollkorn is intended for modest and high quality text, which is perfect for our headings. It has a dark and healthy look. The font size should be around 18-22px. We will resize if needed.
                 </p>
 
                 <p class="typeface1">Typefaces</p>
@@ -185,9 +176,7 @@
 
 
             <p class="rubik_vollkorn">
-                Rubik is a sans serif font, we chose this for the text because it has the ability to create a visual
-                contrast when standing side by side. This will always ensure the legibility of the textual content. The
-                font size should be 16px to 18px for the title. We will resize it if needed.
+                Rubik is a part of the sans serif font family, we chose this for our body because of it being easy to read for users. This ensures that readers will be able to read our content and the normal font size for this should be around 16-20px. If needed, we will be resizing it.
             </p>
 
             <p class="rubik_typeface1">Typefaces</p>
