edited home page

--- a/typography.html
+++ b/typography.html
@@ -263,14 +263,14 @@
 
         <div id="photography_page">
             <a href="photo.html">PHOTOGRAPHY</a>
-            <a href="photo.html"><img src="next.png" alt=""></a>
+            <a href="photo.html"><img src="img/next.png" alt=""></a>
         </div>
     </div>
-    <footer>
-        <div id="footer_line"></div>
-        <p class="footer_p1">SHARE FOOD</p>
-        <p class="footer_p2">©2022</p>
-    </footer>
+    <div class="logo_footer">
+        <div class="logo_topline"></div>
+        <h1 class="logo_name"> SHARE FOOD</h1>
+        <h1 class="logo_copy_right">©2022</h1>
+    </div>
 </body>
 
 </html>
