--- a/color.html
+++ b/color.html
@@ -28,7 +28,7 @@
                 <li><a href="menu.html" class="nav_link">LOGO</a></li>
                 <li><a href="color.html" class="nav_link">COLOR</a></li>
                 <li><a href="typography.html" class="nav_link">TYPOGRAPHY</a></li>
-                <li><a href="photography.html" class="nav_link">PHOTOGRAPHY</a></li>
+                <li><a href="photo.html" class="nav_link">PHOTOGRAPHY</a></li>
             </ul>
         </div>
     </div>
@@ -169,7 +169,7 @@
 
     <div class="next_button">
         <a href="typography.html" class="color_text_link">TYPOGRAPHY</a>
-        <a href="typography.html"><img class="color_next" src="next.png"></a>
+        <a href="typography.html"><img class="color_next" src="img/next.png"></a>
     </div>
 
     <div class="f_color_topline"></div>
