--- a/color.html
+++ b/color.html
@@ -25,10 +25,10 @@
         <div class="nav">
             <ul class="nav_list">
                 <li><a href="home.html" class="nav_link">HOME</a></li>
-                <li><a href="menu.html" class="nav_link">LOGO</a></li>
+                <li><a href="logo.html" class="nav_link">LOGO</a></li>
                 <li><a href="color.html" class="nav_link">COLOR</a></li>
                 <li><a href="typography.html" class="nav_link">TYPOGRAPHY</a></li>
-                <li><a href="photography.html" class="nav_link">PHOTOGRAPHY</a></li>
+                <li><a href="imagery.html" class="nav_link">IMAGERY</a></li>
             </ul>
         </div>
     </div>
@@ -169,7 +169,7 @@
 
     <div class="next_button">
         <a href="typography.html" class="color_text_link">TYPOGRAPHY</a>
-        <a href="typography.html"><img class="color_next" src="next.png"></a>
+        <a href="typography.html"><img class="color_next" src="img/next.png"></a>
     </div>
 
     <div class="f_color_topline"></div>
