--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                     <li><a href="logo.html" class="nav_link">LOGO</a></li>
                     <li><a href="color.html" class="nav_link">COLOR</a></li>
                     <li><a href="typography.html" class="nav_link">TYPOGRAPHY</a></li>
-                    <li><a href="photo.html" class="nav_link">PHOTOGRAPHY</a></li>
+                    <li><a href="imagery.html" class="nav_link">IMAGERY</a></li>
                 </ul>
             </div>
         </div>
@@ -82,7 +82,7 @@
 
             <div>
                 <h1 class="link"><a href="logo.html" class="text_link">LOGO</a></h1>
-                <a href="logo.html"><img class="next" src="next.png"></a>
+                <a href="logo.html"><img class="next" src="img/next.png"></a>
             </div>
         </div>
         
