--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="image">
-                <img src="img/Main-pic.jpeg" class="home_img">
+                <img src="img/spork.svg" class="home_img">
             </div>
 
             <div>
