--- a/imagery.html
+++ b/imagery.html
@@ -60,7 +60,7 @@
                     This image is shown for the cover image on the welcome page, it includes the main colors of the page to give the user a dynamic and fresh feel before starting the application. 
                     Image will be assigned with 280x280, but we will resize it if needed.
                 </p>
-                <img class="main_img" src="img/spork.png">
+                <img class="main_img" src="img/spork.svg">
                 <h4 class="f_img-heading">Icons</h4>
                 <p class="f_img_text">Use graphic rounded borders of 50% to make it circular. </p>
 
@@ -75,12 +75,12 @@
             </div>
 
             <div>
-                <img class="first_img" src="img/sandwich.png">
+                <img class="first_img" src="img/sandwich.svg">
                 <img class="second_img" src="img/camera.png">
-                <img class="third_img" src="img/cupcake.png">
-                <img class="fourth_img" src="img/location.png">
-                <img class="fifth_img" src="img/yes.png">
-                <img class="sixth_img" src="img/no.png">
+                <img class="third_img" src="img/cupcake.svg">
+                <img class="fourth_img" src="img/location.svg">
+                <img class="fifth_img" src="img/yes.svg">
+                <img class="sixth_img" src="img/no.svg">
                 <div class="first_button"><button>Browse Food</button></div>
                 <div class="second_button"><button>Take Quiz</button></div>
                 <div class="third_button"><button>Confirm Order</button></div>
@@ -96,7 +96,6 @@
       
         <div class="footer">
             <hr class="line_5">
-            <br><br>
             <h1 class="brand_name_5"> SHARE FOOD</h1>
             <h1 class="copy_right_5">©2022</h1>
         </div>
