--- a/typography.html
+++ b/typography.html
@@ -266,11 +266,12 @@
             <a href="imagery.html"><img src="img/next.png" alt=""></a>
         </div>
     </div>
-    <div class="logo_footer">
+    <div class="type_footer">
         <div class="logo_topline"></div>
         <h1 class="logo_name"> SHARE FOOD</h1>
         <h1 class="logo_copy_right">©2022</h1>
     </div>
+
 </body>
 
 </html>
