--- a/typography.html
+++ b/typography.html
@@ -266,11 +266,11 @@
             <a href="photo.html"><img src="img/next.png" alt=""></a>
         </div>
     </div>
-    <div class="logo_footer">
-        <div class="logo_topline"></div>
-        <h1 class="logo_name"> SHARE FOOD</h1>
-        <h1 class="logo_copy_right">©2022</h1>
-    </div>
+    <footer>
+        <div id="footer_line"></div>
+        <p class="footer_p1">SHARE FOOD</p>
+        <p class="footer_p2">©2021</p>
+    </footer>
 </body>
 
 </html>
