--- a/typography.html
+++ b/typography.html
@@ -144,7 +144,7 @@
             <div class="color" id="color1"></div>
             <div class="color_text1">
                 Primary Typeface<br>
-                Hex: #33393E<br>
+                Hex: #333333<br>
                 RGB: 51,57,61
             </div>
             <div class="color" id="color2"></div>
@@ -156,7 +156,7 @@
             <div class="color" id="color3"></div>
             <div class="color_text3">
                 Secondary<br>
-                Hex: #6C9083<br>
+                Hex: #4D4E52<br>
                 RGB: 108,144,131
             </div>
             <div class="color" id="color4"></div>
