removed footer on imagery.html

--- a/color.html
+++ b/color.html
@@ -91,10 +91,7 @@
         <div class="visual_color_btmline"></div>
     </div>
 
-    <p class="par2">Visual colors are designed to follow a simple trend, and harmonize with website details such as
-        images, text, and logos. As always, the Shadow Green and Rose Fog colors are the main color group used for
-        the logo and the heading colors to make it stand out. Therefore, we will choose appropriate color palettes
-        for easy reading, increase interactivity, highlight content, and not make users feel uncomfortable.</p>
+    <p class="par2">Our visual colors are used to guide our users to make our app easy to navigate through. The menu and button colors are chosen to contrast or compliment our main brand color, the Maize Crayola Yellow. Our colors are used sparingly and for the sole purpose of improving user experience.</p>
     </div>
 
     <!-- Branded Color Section -->
