--- a/color.html
+++ b/color.html
@@ -35,10 +35,7 @@
     </div>
 
     <h1 class="color_page">COLOR</h1>
-    <p class="par">We aim for vibrant and bright color palettes for a fun, fresh, engaging, and dynamic orange feel. The
-        harmony in app interface design is what we always aim for. In order to make the user feel satisfied and
-        comfortable, we strive to bring a balance into the user interface design that is most attractive and effective
-        for the user experience. Harmonized colors contribute to a good first impression from our app.</p>
+    <p class="par"> With our color palettes we want to stimulate appetite, by having a color palette centered around vibrant yellows, reds, and oranges. Each colour by themselves will give off a fun and fresh vibe. When these colors are used in unison, they combine together to give off a warm, happy, and healthy vibes, which encompasses the benefits for our webapp. The balance of these colors will make our user's feel welcomed because of our design, which will improve the user's experience with our app and continue to come back to our app.</p>
 
     <!-- Branded Colors Section -->
 
