added coolors img

--- a/color.html
+++ b/color.html
@@ -79,6 +79,7 @@
                 <p>RGB: 215, 138, 118</p>
             </div>
         </div>
+        <img src="img/ShareFood_Palette.png" class="coolors">
     </div>
 
     <!-- Visual Color Section -->
@@ -162,10 +163,7 @@
     </div>
 
     <div class="f_color_topline"></div>
-    <div class="footer">
-        <h1 class="brand_name"> SHARE FOOD</h1>
-        <h1 class="copy_right">©2022</h1>
-    </div>
+
 </body>
 
 </html>
